Se agregan páginas para registrar la entrada y salida del vehículo

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-VITE_BASE_API_URL=https://dev1.vantagelabs.co/v2_api
-VITE_APP_TITLE='Parqueaderos Ltda.'
+VITE_BASE_API_URL=http://localhost:3000
+VITE_APP_TITLE='Parking Ltda.'
