--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-VITE_BASE_API_URL=http://localhost:3000
-VITE_APP_TITLE='Parking Ltda.'
+VITE_BASE_API_URL=http://localhost:3004
+VITE_APP_TITLE='Parking Lot Ltda.'
