--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:warn": "NODE_OPTIONS=--experimental-fetch vitest",
     "test:e2e": "playwright test",
     "test:unit": "vitest",
+    "test:coverage": "vitest run --coverage",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
+    "@pinia/testing": "^0.0.12",
     "@playwright/test": "^1.19.2",
     "@quasar/vite-plugin": "^1.0.5",
     "@types/node": "^17.0.21",
@@ -45,6 +47,7 @@
     "@vitejs/plugin-vue": "^2.2.2",
     "@vitest/ui": "^0.12.9",
     "@vue/test-utils": "^2.0.0-rc.17",
+    "c8": "^7.11.3",
     "eslint": "^8.10.0",
     "eslint-config-google": "^0.14.0",
     "eslint-import-resolver-typescript": "^2.5.0",
