--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@playwright/test": "^1.19.2",
     "@quasar/vite-plugin": "^1.0.5",
     "@types/node": "^17.0.21",
+    "@types/ramda": "^0.28.14",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "@vitejs/plugin-legacy": "^1.7.1",
